# django-mcquiz

./: .env.example  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  requirements.txt  setup.cfg
MCQuizApp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
MCQuizApp/migrations/: 0001_initial.py
MCQuizApp/templates/: base.html  base_quiz.html
MCQuizApp/templates/MCQuizApp/: question_list.html  quiz_detail.html  quiz_list.html  solutions.html
MCQuizApp/tests/: test_forms.py  test_models.py  test_views.py
mcquiz_project/: settings.py  urls.py  wsgi.py
