[metadata]
name = django-mcquiz
version = 0.1.2
description = A Django app to create, display and score multiple choice quizzes.
long_description = file: README.rst
url = https://github.com/Kevin-Oudai/django-mcquiz
author = Kevin Oudai
author_email = kevinoudai@hotmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    django-latexify == 0.3
    python-slugify == 5.0.2